# oh-my-ai-docs

./: .dockerignore  .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .relint.yml  CHANGELOG.md  Dockerfile  Justfile  README.md  SCRATCH.md  mkdocs.yml  mkdocs_macro_plugin.py  pyproject.toml  pyrightconfig.json  sample.env
.cursor/: mcp-sample.json
.cursor/rules/core-rules/: markdown-xml-tagging-manual.mdc
.cursor/rules/fastmcp-rules/: context-session-management-agent.mdc  core-server-configuration-agent.mdc  fastmcp-context-testing-agent.mdc  integration-agent.mdc  mvp-testing-agent.mdc  performance-scaling-agent.mdc  prompt-engineering-agent.mdc  resource-management-agent.mdc  security-authentication-agent.mdc  stdio-server-agent.mdc  testing-debugging-agent.mdc  tool-development-agent.mdc
.cursor/rules/global-rules/: fastmcp-docs-router-always.mdc  langgraph-docs-router-always.mdc  modelcontextprotocol-docs-router-always.mdc  pydantic-docs-router-always.mdc
.cursor/rules/langchain-rules/: langchain-chat-model-integration-testing-agent.mdc  langchain-chat-model-unit-testing-agent.mdc  langchain-embeddings-integration-testing-agent.mdc  langchain-embeddings-unit-testing-agent.mdc  langchain-retrievers-integration-testing-agent.mdc  langchain-retrievers-unit-testing-agent.mdc  langchain-tool-integration-testing-agent.mdc  langchain-tool-unit-testing-agent.mdc  langchain-vectorstore-integration-testing-agent.mdc  langchain-vectorstore-unit-testing-agent.mdc
.cursor/rules/py-rules/: pytest-fixtures-agent.mdc  python-tdd-auto.mdc  sklearn-vectorstore-testing-auto.mdc
.devcontainer/: devcontainer-ha.json  devcontainer.json
docs/: README.md  fastmcp-examples.md  hooks.py
docs/ai_docs/discord/: discord_docs.txt  llms.txt
docs/ai_docs/discord/summaries/: discordpy.readthedocs.io_en_stable_discord.html.txt  discordpy.readthedocs.io_en_stable_ext_commands_index.html.txt  discordpy.readthedocs.io_en_stable_ext_tasks_index.html.txt  discordpy.readthedocs.io_en_stable_faq.html.txt  discordpy.readthedocs.io_en_stable_genindex.html.txt  discordpy.readthedocs.io_en_stable_index.html.txt  discordpy.readthedocs.io_en_stable_intents.html.txt  discordpy.readthedocs.io_en_stable_interactions_api.html.txt  discordpy.readthedocs.io_en_stable_intro.html.txt  discordpy.readthedocs.io_en_stable_logging.html.txt  discordpy.readthedocs.io_en_stable_migrating.html.txt  discordpy.readthedocs.io_en_stable_quickstart.html.txt  github.com_Rapptz_discord.py_tree_v2.5.2_examples.txt  github.com_Rapptz_discord.py_tree_v2.5.2_examples_app_commands.txt  github.com_Rapptz_discord.py_tree_v2.5.2_examples_modals.txt  github.com_Rapptz_discord.py_tree_v2.5.2_examples_views.txt  summarized_urls.json
docs/ai_docs/dpytest/: llms.txt
docs/ai_docs/dpytest/summaries/: dpytest.readthedocs.io_en_latest_index.html.txt  dpytest.readthedocs.io_en_latest_modules_backend.html.txt  dpytest.readthedocs.io_en_latest_modules_factories.html.txt  dpytest.readthedocs.io_en_latest_modules_index.html.txt  dpytest.readthedocs.io_en_latest_modules_runner.html.txt  dpytest.readthedocs.io_en_latest_modules_utils.html.txt  dpytest.readthedocs.io_en_latest_modules_verify.html.txt  summarized_urls.json
docs/ai_docs/langgraph/: langgraph_docs.txt  llms.txt
docs/ai_docs/langgraph/summaries/: langchain-ai.github.io_langgraph_concepts_.txt  langchain-ai.github.io_langgraph_concepts_agentic_concepts_.txt  langchain-ai.github.io_langgraph_concepts_application_structure_.txt  langchain-ai.github.io_langgraph_concepts_assistants_.txt  langchain-ai.github.io_langgraph_concepts_auth_.txt  langchain-ai.github.io_langgraph_concepts_breakpoints_.txt  langchain-ai.github.io_langgraph_concepts_bring_your_own_cloud_.txt  langchain-ai.github.io_langgraph_concepts_deployment_options_.txt  langchain-ai.github.io_langgraph_concepts_double_texting_.txt  langchain-ai.github.io_langgraph_concepts_durable_execution_.txt  langchain-ai.github.io_langgraph_concepts_faq_.txt  langchain-ai.github.io_langgraph_concepts_functional_api_.txt  langchain-ai.github.io_langgraph_concepts_high_level_.txt  langchain-ai.github.io_langgraph_concepts_human_in_the_loop_.txt  langchain-ai.github.io_langgraph_concepts_langgraph_cli_.txt  langchain-ai.github.io_langgraph_concepts_langgraph_cloud_.txt  langchain-ai.github.io_langgraph_concepts_langgraph_control_plane_&.txt  langchain-ai.github.io_langgraph_concepts_plans_.txt  (+80 more)
docs/developer/fastmcp/: README.md  fastmcp_stdio_best_practices.md  fastmcp_test_example_basic.md  fastmcp_test_example_context.md  fastmcp_test_example_langchain_vectoresore.md  fastmcp_test_example_lifespan.md  fastmcp_test_example_prompts.md  fastmcp_test_example_resources.md  fastmcp_test_example_tools.md
docs/developer/langchain/: langchain_test_example_chat_models.md  langchain_test_example_embeddings.md  langchain_test_example_retrievers.md  langchain_test_example_tools.md  langchain_test_example_vectorstores.md
docs/research/cursor/: 20240412_how_rule_generation_works.md  how_rule_generation_works.md
hack/ide-configs/vscode/: launch.json  settings.json
justfiles/: check.just  doc.just  llmstxt.just  open.just  test.just  uv.just  variables.just  vectorstore.just
scripts/: audit_cursor_rules_headers.py  audit_cursor_rules_headers_gemini.py  avectorstore_mcp.py  bboxes.py  build_llmstxt_context.py  check_rule_lines.py  jekyll_run.sh  serve_docs.py  token_counter.py  update_changelog.py  validate_frontmatter.py  vectorstore_mcp.py
scripts/ci/: cz-prepare-release.py  cz-prepare-release.sh  cz-release.py  cz-release.sh  increase_version_number.py
scripts/docs/: gen_ref_pages.py
src/oh_my_ai_docs/: __main__.py  __version__.py  avectorstore_mcp.py  cli.py
tests/: conftest.py  fake_embeddings.py  test_avectorstore_mcp.py
tests/fixtures/dpytest/: dpytest_docs.txt
tests/test_avectorstore/: conftest.py  test_aserver.py  test_server.py
tests/test_core/: test_basic.py
xnotes/: audit-script-checklist-always.mdc  checklist-update-rule-gen-docs.md  cursor-rule-behavior-research-gemini.md  fastmcp-improvements.md
(+4 files in other folders)
